log
Wed, Mar 19, 2025  8:48:24 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:15:24 AM: 
 exercises.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += (int*) elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
dbd3225
Wed, Mar 19, 2025  9:16:28 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
289c18a
Wed, Mar 19, 2025  9:18:43 AM: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:66:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += elemento;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
32d1ddd
Wed, Mar 19, 2025  9:20:30 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
234a346
